added colors fonts and sizing to stylesheet

--- a/index.html
+++ b/index.html
@@ -27,19 +27,27 @@
 
 <!-- about me section -->
 <body>
-    <header>
+    <div>
         <h1>About Me</h1>
-        <img add image here>
+        <img src=".//assets/images/KirPhoto.jpg" alt= "Kirsten Canady in business attire ready for work">
         <p>Type information about myself here</p>
-    </header>
+    </div>
 </body>
 <!-- end about me section -->
 
 <!-- my-work section -->
 <body>
-    <header>
+    <div>
         <h1>My Work</h1>
-    </header>
+    </div>
+    
+    <div class = "work-samples">
+        <img src="./assets/images/PacDraftBanner.png" alt= "bigfoot's pushing a keg and carrying a tool box through the forest with the name Pacific Draftworks and a phone number for reference">
+    </div>
+
+    <div class = "work-samples">
+        <img src 
+    </div>
 </body>
 <!-- end my-work section -->
 
@@ -49,6 +57,8 @@
         <h1>Contact Me</h1>
         <nav>
             <ul>
+                <li>Phone Number: 916-865-7234</li>
+                <li>Email: Kirsten@PacificDraftWorks.com</li>
                 <li>Facebook</li>
                 <li>LinkdIn</li>
                 <li>Instagram</li>
