updated sections with links added footer

--- a/index.html
+++ b/index.html
@@ -17,54 +17,84 @@
                 <li><a href="#about-me">About Me</a></li>
                 <li><a href="#my-work">My Work</a></li>
                 <li><a href="#contact-me">Contact Me</a></li>
-                <li><a href="#resume">Resume</a></li>
                 <li><a href="#social-media">Social Media</a></li>
             </ul>
         </nav>
     </header>
-</body>
+
 <!-- end navigation tags-->
 
 <!-- about me section -->
-<body>
-    <div>
+    <div id = "about-me" class ="about-me">
         <h1>About Me</h1>
         <img src=".//assets/images/KirPhoto.jpg" alt= "Kirsten Canady in business attire ready for work">
-        <p>Type information about myself here</p>
+        <p>My name is Kirsten Canady and I am a part owner and the office manager for a company called Pacific DraftWorks.  I am married and have two children, a dog, two cats and seven chickens.  I decided to take this course to assist my company with setting up a more solid webpage in which we can sell our products and conduct business more efficiently.</p>
     </div>
-</body>
+
 <!-- end about me section -->
 
 <!-- my-work section -->
-<body>
-    <div>
+    <div id = "my-work" class ="my-work">
         <h1>My Work</h1>
-    </div>
-    
-    <div class = "work-samples">
-        <img src="./assets/images/PacDraftBanner.png" alt= "bigfoot's pushing a keg and carrying a tool box through the forest with the name Pacific Draftworks and a phone number for reference">
+        <div class = "work-samples">
+            <h2 class = "sample-name">sample 1 Pacific DraftWorks</h2>
+            <img src="./assets/images/PacDraftBanner.png" alt= "bigfoot's pushing a keg and carrying a tool box through the forest with the name Pacific Draftworks and a phone number for reference">
+        </div>
+
+        <div class = "work-samples">
+            <h2 class = "sample-name">sample 2 RunBuddy</h2>
+            <img src>
+        </div>
+
+        <div class = "work-samples">
+            <h2 class = "sample-name">sample 3 </h2>
+        </div>
+
+        <div class = "work-samples">
+            <h2 class = "sample-name">sample 4</h2>
+        </div>
+
+        <div class = "work-samples">
+            <h2 class = "sample-name">sample 5</h2>
+        </div>
     </div>
 
-    <div class = "work-samples">
-        <img src 
-    </div>
-</body>
 <!-- end my-work section -->
 
+<!--social media section-->
+<div id = "social-media" class = "social-media">
+    <h1>Find me on social media!</h1>
+    <nav>
+        <ul>
+            <li>Facebook</li>
+            <li>LinkdIn</li>
+            <li>Instagram</li>
+        </ul>
+    </nav>
+</div>
+<!--end social media section-->
+
 <!-- contact me section -->
-<body>
-    <footer>
+    <div id = "contact-me" class = "contact-me">
         <h1>Contact Me</h1>
         <nav>
             <ul>
                 <li>Phone Number: 916-865-7234</li>
                 <li>Email: Kirsten@PacificDraftWorks.com</li>
-                <li>Facebook</li>
-                <li>LinkdIn</li>
-                <li>Instagram</li>
                 <li>Resume</li>
             </ul>
         </nav>
-    </footer>
-</body>
+    </div>
+
 <!-- end contact me section-->
+
+<!--footer-->
+<footer>
+    <h1>Cheerfully Made by Kirsten Canady</h1>
+    <div>
+       &copy; 2021
+    </div>
+</footer>
+<!-- end footer-->
+
+</body>
