added images links and additional styles

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="./assets/css/style.css">
+        <link rel="stylesheet2" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <title>Kirsten Canady Portfolio</title>
     </head>
 
@@ -28,7 +29,7 @@
     <div id = "about-me" class ="about-me">
         <h1>About Me</h1>
         <img src=".//assets/images/KirPhoto.jpg" alt= "Kirsten Canady in business attire ready for work">
-        <p>My name is Kirsten Canady and I am a part owner and the office manager for a company called Pacific DraftWorks.  I am married and have two children, a dog, two cats and seven chickens.  I decided to take this course to assist my company with setting up a more solid webpage in which we can sell our products and conduct business more efficiently.</p>
+        <p>My name is Kirsten Canady and I am a part owner and the office manager for a company called Pacific DraftWorks.  I am married and have two children, a dog, two cats and seven chickens.  I decided to take this course to assist my company with setting up a more solid webpage in which we can sell our products and conduct business more efficiently. Eventually I would also like to be able to develop a mobile application that works with our industry to provide service and equipment to customers.</p>
     </div>
 
 <!-- end about me section -->
@@ -36,18 +37,17 @@
 <!-- my-work section -->
     <div id = "my-work" class ="my-work">
         <h1>My Work</h1>
-        <div class = "work-samples">
-            <h2 class = "sample-name">sample 1 Pacific DraftWorks</h2>
-            <img src="./assets/images/PacDraftBanner.png" alt= "bigfoot's pushing a keg and carrying a tool box through the forest with the name Pacific Draftworks and a phone number for reference">
+        <div class = "pacificdraftworks">
+            <img src="./assets/images/PacificDraftworks_nobackground_20180910.png" alt= "bigfoot's pushing a keg and carrying a tool box through the forest with the name Pacific Draftworks and a phone number for reference">
         </div>
 
-        <div class = "work-samples">
-            <h2 class = "sample-name">sample 2 RunBuddy</h2>
-            <img src>
+        <div class = "runbuddy">
+            <img src ="./assets/images/RunBuddyScreenGrab.PNG" alt = "screengrab of the runbuddy webpage">
+           <!-- add in website link under image <a href ="https://kgcan.github.io/run-buddy">Run Buddy Website</a> -->
         </div>
 
-        <div class = "work-samples">
-            <h2 class = "sample-name">sample 3 </h2>
+        <div class = "robotwars">
+            <img src="./assets/images/RobotWars.jpg" alt = "two robot toys fighting">
         </div>
 
         <div class = "work-samples">
@@ -66,8 +66,8 @@
     <h1>Find me on social media!</h1>
     <nav>
         <ul>
-            <li>Facebook</li>
-            <li>LinkdIn</li>
+            <li><a href="https://www.facebook.com/caseynkirsten.canady" class="fa fa-facebook"></a></li>
+            <li><a href="#" class =</li>
             <li>Instagram</li>
         </ul>
     </nav>
@@ -79,9 +79,9 @@
         <h1>Contact Me</h1>
         <nav>
             <ul>
-                <li>Phone Number: 916-865-7234</li>
-                <li>Email: Kirsten@PacificDraftWorks.com</li>
-                <li>Resume</li>
+                <li><strong>Phone:</strong><a href="#">916-865-7234</a></li>
+                <li><strong>Email:</strong><a href="mailto:Kirsten@PacificDraftWorks.com">Kirsten@PacificDraftWorks.com</a></li>
+                <li><strong>Resume:</strong><a href="#"></a></li>
             </ul>
         </nav>
     </div>
@@ -90,10 +90,7 @@
 
 <!--footer-->
 <footer>
-    <h1>Cheerfully Made by Kirsten Canady</h1>
-    <div>
-       &copy; 2021
-    </div>
+    <h1>&copy; 2021 Built by Kirsten Canady</h1>
 </footer>
 <!-- end footer-->
 
