added images and links as well as updated css

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
     <head>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="./assets/css/style.css">
-        <link rel="stylesheet2" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <title>Kirsten Canady Portfolio</title>
     </head>
 
@@ -50,38 +49,26 @@
             <img src="./assets/images/RobotWars.jpg" alt = "two robot toys fighting">
         </div>
 
-        <div class = "work-samples">
-            <h2 class = "sample-name">sample 4</h2>
+        <div class = "css">
+            <img src="./assets/images/CSS.jpg" alt ="css logo">
         </div>
 
-        <div class = "work-samples">
-            <h2 class = "sample-name">sample 5</h2>
+        <div class = "javascript">
+            <img src="./assets/images/javascript.png" alt = "javascript log">
         </div>
     </div>
 
 <!-- end my-work section -->
-
-<!--social media section-->
-<div id = "social-media" class = "social-media">
-    <h1>Find me on social media!</h1>
-    <nav>
-        <ul>
-            <li><a href="https://www.facebook.com/caseynkirsten.canady" class="fa fa-facebook"></a></li>
-            <li><a href="#" class =</li>
-            <li>Instagram</li>
-        </ul>
-    </nav>
-</div>
-<!--end social media section-->
 
 <!-- contact me section -->
     <div id = "contact-me" class = "contact-me">
         <h1>Contact Me</h1>
         <nav>
             <ul>
-                <li><strong>Phone:</strong><a href="#">916-865-7234</a></li>
+                <li><strong>Phone:</strong><a href="call:9168657234">916-865-7234</a></li>
                 <li><strong>Email:</strong><a href="mailto:Kirsten@PacificDraftWorks.com">Kirsten@PacificDraftWorks.com</a></li>
-                <li><strong>Resume:</strong><a href="#"></a></li>
+                <li><strong>Facebook:</strong><a href="https://www.facebook.com/caseynkirsten.canady" target="_blank"></a>Facebook</li>
+                <li><strong>LinkdIn:</strong><a href="https://linkedin.com/in/kirsten-canady-117015b7" target="_blank"></a>LinkedIn</li>
             </ul>
         </nav>
     </div>
