--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
                 <li><a href="#about-me">About Me</a></li>
                 <li><a href="#my-work">My Work</a></li>
                 <li><a href="#contact-me">Contact Me</a></li>
-                <li><a href="#social-media">Social Media</a></li>
             </ul>
         </nav>
     </header>
@@ -26,9 +25,13 @@
 
 <!-- about me section -->
     <div id = "about-me" class ="about-me">
-        <h1>About Me</h1>
+        <h1>All About Me</h1>
+        </div>
+        <div class="my-photo">
         <img src=".//assets/images/KirPhoto.jpg" alt= "Kirsten Canady in business attire ready for work">
-        <p>My name is Kirsten Canady and I am a part owner and the office manager for a company called Pacific DraftWorks.  I am married and have two children, a dog, two cats and seven chickens.  I decided to take this course to assist my company with setting up a more solid webpage in which we can sell our products and conduct business more efficiently. Eventually I would also like to be able to develop a mobile application that works with our industry to provide service and equipment to customers.</p>
+        </div>
+        <p class ="about-me-paragraph">My name is Kirsten Canady and I am a part owner and the office manager for a company called Pacific DraftWorks.  I am married and have two children, a dog, two cats and seven chickens.  I decided to take this course to assist my company with setting up a more solid webpage in which we can sell our products and conduct business more efficiently. Eventually I would also like to be able to develop a mobile application that works with our industry to provide service and equipment to customers.</p>
+        </div>
     </div>
 
 <!-- end about me section -->
@@ -36,13 +39,13 @@
 <!-- my-work section -->
     <div id = "my-work" class ="my-work">
         <h1>My Work</h1>
+        <div class ="cards">
         <div class = "pacificdraftworks">
             <img src="./assets/images/PacificDraftworks_nobackground_20180910.png" alt= "bigfoot's pushing a keg and carrying a tool box through the forest with the name Pacific Draftworks and a phone number for reference">
         </div>
-
-        <div class = "runbuddy">
+             <div class = "runbuddy">
             <img src ="./assets/images/RunBuddyScreenGrab.PNG" alt = "screengrab of the runbuddy webpage">
-           <!-- add in website link under image <a href ="https://kgcan.github.io/run-buddy">Run Buddy Website</a> -->
+            <a href ="https://kgcan.github.io/run-buddy"></a>
         </div>
 
         <div class = "robotwars">
@@ -56,6 +59,7 @@
         <div class = "javascript">
             <img src="./assets/images/javascript.png" alt = "javascript log">
         </div>
+        </div>
     </div>
 
 <!-- end my-work section -->
@@ -65,10 +69,10 @@
         <h1>Contact Me</h1>
         <nav>
             <ul>
-                <li><strong>Phone:</strong><a href="call:9168657234">916-865-7234</a></li>
+                <li><strong>Phone:</strong><a href="#">916-865-7234</a></li>
                 <li><strong>Email:</strong><a href="mailto:Kirsten@PacificDraftWorks.com">Kirsten@PacificDraftWorks.com</a></li>
-                <li><strong>Facebook:</strong><a href="https://www.facebook.com/caseynkirsten.canady" target="_blank"></a>Facebook</li>
-                <li><strong>LinkdIn:</strong><a href="https://linkedin.com/in/kirsten-canady-117015b7" target="_blank"></a>LinkedIn</li>
+                <li>Facebook:<a href="https://www.facebook.com/caseynkirsten.canady">Click Here!</a></li>
+                <li>LinkedIn:<a href="https://linkedin.com/in/kirsten-canady-117015b7">Click Here!</a></li>
             </ul>
         </nav>
     </div>
