updated README added ability to click on images to get to websites adjusted styles

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="my-photo">
         <img src=".//assets/images/KirPhoto.jpg" alt= "Kirsten Canady in business attire ready for work">
         </div>
-        <p class ="about-me-paragraph">My name is Kirsten Canady and I am a part owner and the office manager for a company called Pacific DraftWorks.  I am married and have two children, a dog, two cats and seven chickens.  I decided to take this course to assist my company with setting up a more solid webpage in which we can sell our products and conduct business more efficiently. Eventually I would also like to be able to develop a mobile application that works with our industry to provide service and equipment to customers.</p>
+        <p class ="about-me-paragraph">My name is Kirsten Canady and I am a part owner and the office manager for a company called Pacific DraftWorks with my husband.  We design, install and service draft beverage systems throughout Northern California and Nevada.  We have two children, a 11 year old daughter and a 9 year old son, a dog, two cats and seven chickens.  Our company aspires to create a more interative user experience when requesting service for draft system needs.  We are working to create a system that combines a back-end database for companies that pairs with a mobile application for field technicians and a mobile application for customers.  By streamlining the process of requesting service and quotes for new draft systems we hope to change the dynamic of the draft beverage industry.</p>
         </div>
     </div>
 
@@ -40,26 +40,12 @@
     <div id = "my-work" class ="my-work">
         <h1>My Work</h1>
         <div class ="cards">
-        <div class = "pacificdraftworks">
-            <img src="./assets/images/PacificDraftworks_nobackground_20180910.png" alt= "bigfoot's pushing a keg and carrying a tool box through the forest with the name Pacific Draftworks and a phone number for reference">
-        </div>
-             <div class = "runbuddy">
-            <img src ="./assets/images/RunBuddyScreenGrab.PNG" alt = "screengrab of the runbuddy webpage">
-            <a href ="https://kgcan.github.io/run-buddy"></a>
-        </div>
-
-        <div class = "robotwars">
-            <img src="./assets/images/RobotWars.jpg" alt = "two robot toys fighting">
-        </div>
-
-        <div class = "css">
-            <img src="./assets/images/CSS.jpg" alt ="css logo">
-        </div>
-
-        <div class = "javascript">
-            <img src="./assets/images/javascript.png" alt = "javascript log">
-        </div>
-        </div>
+            <a href ="http://www.pacificdraftworks.com"><img id ="pacificdraftworks" src="./assets/images/PacificDraftworks_nobackground_20180910.png" alt= "bigfoot's pushing a keg and carrying a tool box through the forest with the name Pacific Draftworks and a phone number for reference"></a>
+            <a href ="https://kgcan.github.io/run-buddy"><img id = "runbuddy" src ="./assets/images/RunBuddyScreenGrab.PNG" alt = "screengrab of the runbuddy webpage"></a>
+            <a href ="https://kgcan.github.io/robot-gladiators/"><img id = "robotwars" src="./assets/images/RobotWars.jpg" alt = "two robot toys fighting"></a>
+            <img id = "css" src="./assets/images/CSS.jpg" alt ="css logo">
+            <img id = "javascript" src="./assets/images/javascript.png" alt = "javascript log">
+          </div>
     </div>
 
 <!-- end my-work section -->
