--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
             <a href ="http://www.pacificdraftworks.com"><img id ="pacificdraftworks" src="./assets/images/PacificDraftworks_nobackground_20180910.png" alt= "bigfoot's pushing a keg and carrying a tool box through the forest with the name Pacific Draftworks and a phone number for reference"></a>
             <a href ="https://kgcan.github.io/run-buddy"><img id = "runbuddy" src ="./assets/images/RunBuddyScreenGrab.PNG" alt = "screengrab of the runbuddy webpage"></a>
             <a href ="https://kgcan.github.io/robot-gladiators/"><img id = "robotwars" src="./assets/images/RobotWars.jpg" alt = "two robot toys fighting"></a>
+            <a href = "https://kgcan.github.io/Lyrical/"><img id = "lyrical" src = "./assets/images/Lyrical-circle.gif" alt = 
+            "moving muscial note and artistic lettering"></a>
             <img id = "css" src="./assets/images/CSS.jpg" alt ="css logo">
             <img id = "javascript" src="./assets/images/javascript.png" alt = "javascript log">
           </div>
