added screen grab of walk'n spot page and link in index to deployed heroku app

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
             <a href ="https://kgcan.github.io/robot-gladiators/"><img id = "robotwars" src="./assets/images/RobotWars.jpg" alt = "two robot toys fighting"></a>
             <a href = "https://kgcan.github.io/Lyrical/"><img id = "lyrical" src = "./assets/images/Lyrical-circle.gif" alt = 
             "moving muscial note and artistic lettering"></a>
+            <a href ="https://walk-n-spot.herokuapp.com/"><img id = "walknspot" src ="./assets/images/walknspotscreengrab.png" alt = "screengrab of the walk'n spot webpage"></a>
             <img id = "css" src="./assets/images/CSS.jpg" alt ="css logo">
             <img id = "javascript" src="./assets/images/javascript.png" alt = "javascript log">
           </div>
